Deleted unused imports
Signed-off-by: Jesús Navarrete <jesus.navarrete@gmail.com>